Sửa lại api Discount